--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Abdul Faheem.</title>
+    <title>Faheem</title>
     <link
       rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎯</text></svg>"
@@ -31,15 +31,14 @@
 
     <!-- about -->
     <section class="about center" id="About">
-    <div class="center">
-      <h1 class="about_heading">About</h1>
-      <p>
-        Hello! My name is Abdul Faheem, and I'm a web developer.
-        I have a diverse set of skills,ranging from design,
-        to HTML + CSS + javascript.
-      </p>
-    </div>
-        <img src="img.png" alt="">
+      <div class="center">
+        <h1 class="about_heading">About</h1>
+        <p>
+          Hello! My name is Abdul Faheem, and I'm a web developer. I have a
+          diverse set of skills,ranging from design, to HTML + CSS + javascript.
+        </p>
+      </div>
+      <img src="img.png" alt="" />
     </section>
     <section class="skills center" id="Skills">
       <p class="skill_head">Skills</p>
@@ -80,9 +79,7 @@
           </div>
           <div class="box">
             <h1>Tax Consultancy</h1>
-            <p>
-              Taxation Consultancy using HTML, CSS and JS.
-            </p>
+            <p>Taxation Consultancy using HTML, CSS and JS.</p>
             <div class="links">
               <a
                 href="https://github.com/FaheemPechuho/TaxShield"
@@ -103,18 +100,14 @@
           </div>
           <div class="box">
             <h1>Bulk Bazaar E-Commerce</h1>
-            <p>
-              E-Commerce using HTML, CSS, JS, and PHP.
-            </p>
+            <p>E-Commerce using HTML, CSS, JS, and PHP.</p>
             <div class="links">
               <a
                 href="https://github.com/FaheemPechuho/Bulk-Bazaar"
                 target="_blank_"
                 >Github Repo<i class="fas fa-arrow-right"></i
               ></a>
-              <a
-                href="https://bulkbazaar.netlify.app/"
-                target="_blank_"
+              <a href="https://bulkbazaar.netlify.app/" target="_blank_"
                 >Live Demo<i class="fas fa-arrow-right"></i
               ></a>
             </div>
@@ -126,9 +119,7 @@
           </div>
           <div class="box">
             <h1>Grocery App</h1>
-            <p>
-              Grocery App using HTML, CSS and JS. 
-            </p>
+            <p>Grocery App using HTML, CSS and JS.</p>
             <div class="links">
               <a
                 href="https://github.com/FaheemPechuho/Metro-Grocery"
@@ -178,27 +169,27 @@
     <!-- Toggle -->
     <div class="toggle center active" id="toggle">
       <div class="box center">
-          <a href="#main" class="links center"> 
-            <i class="fas fa-home"></i>
-            <p>Home</p>
-          </a>
+        <a href="#main" class="links center">
+          <i class="fas fa-home"></i>
+          <p>Home</p>
+        </a>
       </div>
       <div class="box center">
-          <a href="#About" class="links center"> 
-            <i class="fas fa-address-card"></i>
-            <p>About</p>
-          </a>
+        <a href="#About" class="links center">
+          <i class="fas fa-address-card"></i>
+          <p>About</p>
+        </a>
         <input type="checkbox" name="" id="btn" />
-          <a href="#Skills" class="links center"> 
-            <i class="fas fa-sliders-h"></i>
-            <p>Skills</p>
-          </a>
+        <a href="#Skills" class="links center">
+          <i class="fas fa-sliders-h"></i>
+          <p>Skills</p>
+        </a>
       </div>
       <div class="box">
-          <a href="#Projects" class=" links center"> 
-            <i class="fas fa-tasks"></i>
-            <p>Projects</p>
-          </a>
+        <a href="#Projects" class="links center">
+          <i class="fas fa-tasks"></i>
+          <p>Projects</p>
+        </a>
       </div>
     </div>
 
@@ -214,8 +205,8 @@
       });
       links.forEach((e) => {
         e.addEventListener("click", () => {
-        toggle.classList.toggle("active");
-        })
+          toggle.classList.toggle("active");
+        });
       });
     </script>
   </body>
